--- a/workflow1.Rmd
+++ b/workflow1.Rmd
@@ -170,7 +170,7 @@ combs_list <- combs_with(markers=c('Marker1', 'Marker3'), markers_table = tab)
 combs_list
 ```
 
-## Results
+## Results explanation
 
 To be more clear about the interpretation of results, this section will be focused on "Combination 11" (Marker1+Marker2+Marker3) which has an optimal cutoff equal to  0.216 (see **ROC curves**, reports['Metrics']) .
 This is the equation used to compute the predictions:
@@ -227,3 +227,37 @@ Specifically, for "Combination 11":
 
 Thus, using 0.216 as cutoff, "Combination 11" is able to classify the samples in the dataset with a SE equal to 95.0%, SP equal to 86.9%, and accuracy equal to 88.8% (see **ROC curves**, reports['Metrics']).
 
+## Classification of new samples
+
+CombiROC package also offers the possibility to exploit the models for each selected marker/combination obtained with **ROC_reports()**  (here assigned to *reports$Models*) to directly classify new samples.
+
+The unclassified dataset must be similar to the dataset used for the previous combinatorial analysis (with the same markers, and obviously without the 'Class' column).
+
+To load the dataset with the new unclassified samples  **load_unclassified_data()** has been implemented. This function is analogue to **load()** because it loads the same kind of files and it performs the same format checks, with the exception of what concerns 'Class' column (which is not present in unclassified datasets).  
+
+For explanatory purposes, in the following example has been used a 'synthetic' unclassified dataset ('data/unclassified_proteomic_data.csv') obtained by randomly picking 20 samples from the already classified dataset (*data*).
+The loaded unclassified sample is here assinged to *unc_data*. 
+```{r}
+unc_data <- load_unclassified_data(data = 'data/unclassified_proteomic_data.csv', sep = ',')
+unc_data
+```
+The prediction of the class can be achieved with **Classify()**:
+a function that applies the previously calculated models to the unclassified dataset and classifies the samples accordingly to the very same rule shown in the end of the **Results explanation** section.
+
+This function takes as inputs:
+
+- the unclassified dataset containing the new samples to be classified (*unc_data*).
+- the list of models that have been previously computed by **ROC_reports()** (*reports$Models*).
+- the list of metrics that have been previously computed by **ROC_reports()** (*reports$Metrics*).
+
+In addition the user can set the labels of the predicted class (setting Positive_class and Negative_class), otherwise they will be 1 for positive samples and 0 for the negative samples by default (see the rule shown in the end of the **Results explanation** section).
+
+The function returns a named list of data.frames (here assigned to *cl_data*), one for each marker/combination contained in the list of models (*reports$Models*), containing the predicted class for each sample.
+
+To visualize a data.frame containing the classification performed by a model corresponding to a given marker/combination ('Combination 11' in the following example) it is sufficient to 
+call the data.frame list and specify it.
+
+```{r}
+cl_data <- Classify(unc_data, Models =  reports$Models, Metrics = reports$Metrics, Positive_class = 'A', Negative_class = 'B')
+cl_data$`Combination 11`
+```
