--- a/workflow1.Rmd
+++ b/workflow1.Rmd
@@ -9,15 +9,8 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 # needed libraries
-library(tidyr)
-library(dplyr)
-library(ggplot2)
-library(gtools)
-library(pROC)
-library(stringr)
-# source from file the combiroc custom functions
-#source("C:/Users/rossiriccardo/R/combiroc/combiroc_functions.R")
-source("~/Desktop/ivan/INGM/combiroc/combiroc_functions.R")
+library(devtools)
+load_all()
 ```
 
 
@@ -33,10 +26,10 @@ The dataset to be analysed should be in text format, which can be comma, tab or 
 - From the 3rd column on, the dataset must contain numerical values that represent the signal corresponding to the markers abundance in each sample (marker-related columns). 
 - Marker-related columns can be called 'Marker1, Marker2, Marker3, ...' or can be called directly with the gene/protein name, but "-" is not allowed in the column name. 
 
-The **load()** function uses a customized **read.table()** function that checks the conformity of the dataset format. If all the checks are passed, it reorders alphabetically the marker-related columns depending on marker names (necessary for a proper computation of combinations), and it forces "Class" as 2nd column name.
+The **load_data()** function uses a customized **read.table()** function that checks the conformity of the dataset format. If all the checks are passed, it reorders alphabetically the marker-related columns depending on marker names (necessary for a proper computation of combinations), and it forces "Class" as 2nd column name.
 The loaded dataset is assigned to the "*data*" object.
 ```{r}
-data <- load("data/demo_5Ags.csv", sep=';')
+data <- load_data("data/demo_5Ags.csv", sep=';')
 head(data)
 tail(data)
 ```
@@ -76,7 +69,7 @@ In case of lack of a priori known threshold the user can set set signalthr_predi
 
 
 ```{r}
-distribution <- markers_distribution(data = data_long, case_class = 'A', y_lim = 0.0015, x_lim = 3000, signalthr_prediction = TRUE, min_SE = 40, min_SP = 80)
+distribution <- markers_distribution(data_long, case_class = 'A', y_lim = 0.0015, x_lim = 3000, signalthr_prediction = TRUE, min_SE = 40, min_SP = 80)
 distribution$Plot_density
 distribution$ROC
 distribution$Coord
@@ -135,7 +128,7 @@ rmks
 
 To allow an objective comparison of combinations, the function **ROC_reports()** applies the Generalised Linear Model (stats::**glm()** with family= binomial) for each selected one. The resulting predictions are then used to compute ROC curves (with pROC::**roc()**) and their corresponding metrics which are both returned by the function as a named list object (in this case called "*reports*").  This function requires as input:
 
-- The data object ("*data*") obtained with **load()**.
+- The data object ("*data*") obtained with **load_data()**.
 - The table with combinations and corresponding positive samples counts (*"tab"*), obtained with **Combi()**.
 
 In addition, the function requires to specify the class case, the single markers and/or the combinations of interest. 
@@ -233,7 +226,7 @@ CombiROC package also offers the possibility to exploit the models for each sele
 
 The unclassified dataset must be similar to the dataset used for the previous combinatorial analysis (with the same markers, and obviously without the 'Class' column).
 
-To load the dataset with the new unclassified samples  **load_unclassified_data()** has been implemented. This function is analogue to **load()** because it loads the same kind of files and it performs the same format checks, with the exception of what concerns 'Class' column (which is not present in unclassified datasets).  
+To load the dataset with the new unclassified samples  **load_unclassified_data()** has been implemented. This function is analogue to **load_data()** because it loads the same kind of files and it performs the same format checks, with the exception of what concerns 'Class' column (which is not present in unclassified datasets).  
 
 For explanatory purposes, in the following example has been used a 'synthetic' unclassified dataset ('data/unclassified_proteomic_data.csv') obtained by randomly picking 20 samples from the already classified dataset (*data*).
 The loaded unclassified sample is here assinged to *unc_data*. 
