--- a/vignettes/combiroc.Rmd
+++ b/vignettes/combiroc.Rmd
@@ -1,46 +1,72 @@
 ---
-title: "combiroc"
-output:
-  html_document: 
-    df_print: paged
-  pdf_document: 
-    latex_engine: xelatex
-    df_print: paged
+title: "Getting started with combiroc"
+subtitle: |
+  | How to determine optimal combinations of markers from omics data
+author: 
+- Ivan Ferrari, Riccardo L. Rossi
+date: "`r format(Sys.time(), '%d %B %Y')`"
+output: rmarkdown::html_document 
+  #   df_print: paged
+  # pdf_document: 
+  #   latex_engine: xelatex
+  #   df_print: paged
 vignette: >
-  %\VignetteIndexEntry{combiroc}
-  %\VignetteEncoding{UTF-8}
+  %\VignetteIndexEntry{Getting started with combiroc}
   %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
+
+```{r, echo = FALSE}
+library(httr)
+knitr::opts_chunk$set(comment = "#>", collapse = TRUE)
+```
 
 ```{r setup, include=FALSE}
 library(combiroc)
 ```
 
+# Summary
 
-This markdown shows a representative **combiroc** package analysis workflow in which is assessed the marker combinations performance in classifying samples of the proteomic dataset from [Zingaretti et al. 2012](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3518104/) (the one also used in the CombiROC web app tutorial).  This dataset contains multi-marker signatures for Autoimmune Hepatitis (AIH) for samples clinically diagnosed as “abnormal” (class A) or "normal" (class B).
+Powerful biomarkers are important tools in diagnostic, clinical and research settings. In the area of diagnostic medicine, a biomarker is often used as a tool to identify subjects with a disease, or at high risk of developing a disease. Moreover, it can be used to foresee the more likely outcome of the disease, monitor its progression and predict the response to a given therapy. Diagnostic accuracy can be improved considerably by combining multiple markers, whose performance in identifying diseased subjects is usually assessed via receiver operating characteristic (ROC) curves. The CombiROC tool was originally designed as an easy to use R-Shiny web application [Mazzara et al. 2017](https://www.nature.com/articles/srep45477) to determine optimal combinations of markers from diverse complex omics data; such an implementation is easy to use but has limited fetaures and has limitations given by the machine it is deployed on. This combiroc package is the natural evolution of the CombiROC tool and it allows the researcher/analyst to freely use the method and further build on it. 
 
-## Data loading
+# Standard combiroc workflow
 
-The dataset to be analysed should be in text format, which can be comma, tab or semicolon separated:
+The aim of this document is to show the whole combiroc workflow to get you up and running as quickly as possible with this package. To do so we're going to use the proteomic dataset from [Zingaretti et al. 2012](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3518104/) containing multi-marker signatures for Autoimmune Hepatitis (AIH) for samples clinically diagnosed as “abnormal” (class A) or "normal" (class B). The scope of the workflow is to first find the markers combinations, then to assess their performance in classifying samples of the dataset.
+
+__Note:__ if you use combiroc in your research, please cite:
+
+> Mazzara S., Rossi R.L., Grifantini R., Donizetti S., Abrignani L., Bombaci M. (2017) CombiROC: an interactive web tool for selecting accurate marker combinations of omics data. _Scientific Reports_, __7__:45477. [10.1038/srep45477](https://doi.org/10.1038/srep45477)  
+
+## Required data format
+
+The dataset to be analysed should be in text format, which can be separated by commas, tabs or semicolons. Format of the columns should be the following:
 
 - The 1st column must contain unique patient/sample IDs.
 - The 2nd column must contain the class to which each sample belongs.
-- The classes must be exactly 2 and they must be written in character format. 
-- From the 3rd column on, the dataset must contain numerical values that represent the signal corresponding to the markers abundance in each sample (marker-related columns). 
-- Marker-related columns can be called 'Marker1, Marker2, Marker3, ...' or can be called directly with the gene/protein name, but "-" is not allowed in the column name. 
+- The classes must be exactly TWO and they must be written in character format (i.e. "A" and "B").
+- From the 3rd column on, the dataset must contain numerical values that represent the signal corresponding to the markers abundance in each sample (marker-related columns).
+- The header for marker-related columns can be called 'Marker1, Marker2, Marker3, ...' or can be called directly with the gene/protein name. __Please note__ that "-" (dash) is __not__ allowed in the column names
 
-The **load_data()** function uses a customized **read.table()** function that checks the conformity of the dataset format. If all the checks are passed, it reorders alphabetically the marker-related columns depending on marker names (necessary for a proper computation of combinations), and it forces "Class" as 2nd column name.
-The loaded dataset is assigned to the "*data*" object.
-```{r}
+## Data loading
+
+The `load_data()` function uses a customized **read.table()** function that checks the conformity of the dataset format. If all the checks are passed, marker-related columns are reordered alphabetically, depending on marker names (this is necessary for a proper computation of combinations), and it imposes "Class" as the name of the second column. The loaded dataset is here assigned to the "*data*" object.
+```{r, echo=FALSE}
 data <- load_data("../data/demo_data.csv", sep=';')
-data
 ```
-The very same dataset has been included in **combiroc** package as a demo dataset, that can be directly called typing *demo_data*. 
-```{r}
-demo_data
+```{r, eval=FALSE}
+data <- load_data("../data/demo_data.csv", sep=';')
 ```
-The **CombiROC_long()** is a function that simply wraps dyplr::**pivot_longer()**
-function, and it's used to reshape the data in long format. Data in long format is required to obtain the boxplot of the next function. The obtained data in long format is assinged to "*data_long*" object.
+```{r, echo=FALSE}
+head(data)
+```
+The AIH demonstrative dataset is preloaded in the package and can be directly called typing `demo_data`. 
+
+## Exploring the data
+
+It is usually a good thing to visually explore your data with at least a few plots. Box plots are a nice option to observe the distribution of measurements in each sample. The user can plot the data as she/he wishes using the preferred function: since data for combiroc are required to be in _wide_ (_untidy_) format, they cannot directly used with the widely used `ggplot()` function. Either the user is free to make the data longer (tidy) for the sole purpose of plotting or he can use the package's `CombiROC_long()` function, which is designed to wrap `dplyr::pivot_longer()`function, and it's used to reshape the data in long format. Data in long format is required to obtain the boxplot of the next function. 
+
+The `data` object in wide format is thus transformed into the reshaped long format `data_long` object
+
 ```{r}
 data_long <- CombiROC_long(data)
 data_long
@@ -53,7 +79,7 @@ Since the target of the analysis is the identification of marker combinations ca
 - Positively select most samples belonging to the case class ("A" in this case), which values must be above the signal threshold.
 - Negatively select most control samples ("B"), which values must be below the signal threshold. 
 
-Usually this threshold is suggested by the guidelines of the kit used for the analysis (e.g. mean of buffer signal + n standard deviations). However, it is a good practice to always check the distribution of signal intensity of the dataset. To help the user with this operation, the **markers_distribution()** have been implemented. This function takes as input data in long format ("*data_long*"), and returns a named list (here assigned to '*distribution*') containing the following objects:
+Usually this threshold is suggested by the guidelines of the kit used for the analysis (e.g. mean of buffer signal + n standard deviations). However, it is a good practice to always check the distribution of signal intensity of the dataset. To help the user with this operation, the `markers_distribution()` have been implemented. This function takes as input data in long format ("*data_long*"), and returns a named list (here assigned to '*distribution*') containing the following objects:
 
 - 'Boxplot': a boxplot showing the distribution of each marker values for both classes.
 - "ROC": a ROC curve showing how many real positive samples would be found positive (SE) and how many real negative samples would be found negative (SP) in function of signal threshold. NB: these SE and SP are refereed to the signal intensity threshold considering all the markers together; it is NOT equal to the SE/SP of a single marker/combination (shown later in **Sensitivity and specificity**).
@@ -77,12 +103,12 @@ distribution$Density_summary
 
 ## Combinatorial analysis
 
-**Combi()** function computes the marker combinations and counts their corresponding positive samples for each class (once thresholds are selected). A sample, to be considered positive for a given combination, must have a value higher than a given signal threshold (signalthr) for at least a given number of markers composing that combination (combithr). In this case signalthr is set at 450 while combithr is set at 1, in order to reproduce both the results reported in [Mazzara et. al 2017](https://www.nature.com/articles/srep45477) (CombiROC paper) and also the tutorial of the web app with default thresholds. 
+`Combi()` function computes the marker combinations and counts their corresponding positive samples for each class (once thresholds are selected). A sample, to be considered positive for a given combination, must have a value higher than a given signal threshold (signalthr) for at least a given number of markers composing that combination (combithr). In this case `signalthr` is set at 450 while `combithr` is set at 1, in order to reproduce both the results reported in [Mazzara et. al 2017](https://www.nature.com/articles/srep45477) (CombiROC paper) and also the tutorial of the web app with default thresholds. 
 
-As discussed before, signalthr should be set depending on the guidelines of the kit used for the analysis or by an accurate inspection of signal intensity distribution (see **Markers distribution overview** section). In this specific case 450 is the mean of the intensity of buffer + 3 standard deviation (see [Bombaci & Rossi 2019](https://link.springer.com/protocol/10.1007%2F978-1-4939-9164-8_16)).
-In case of lack of guidelines, it's recommended the inspection of data distribution (see **markers_distribution()**). 
+As discussed before, `signalthr` should be set depending on the guidelines of the kit used for the analysis or by an accurate inspection of signal intensity distribution (see **Markers distribution overview** section). In this specific case 450 is the mean of the intensity of buffer + 3 standard deviation (see [Bombaci & Rossi 2019](https://link.springer.com/protocol/10.1007%2F978-1-4939-9164-8_16)).
+In case of lack of guidelines, it's recommended the inspection of data distribution (see `markers_distribution()`). 
 
-combithr, instead, should be set exclusively depending on the needed stringency. In this example the obtained combinations dataframe is assigned to "*tab*" object.
+`combithr`, instead, should be set exclusively depending on the needed stringency. In this example the obtained combinations dataframe is assigned to "*tab*" object.
 
 ```{r}
 tab<-Combi(data, signalthr = 450, combithr = 1)
@@ -90,7 +116,7 @@ tab
 ```
 ## Sensitivity and specificity
 
-**SE_SP()** function calulates:
+`SE_SP()` function calulates:
 
 - Sensitivity (SE) and specificty (SP) of each combination for each class.
 - The number of markers composing each combination (#Markers). 
@@ -123,13 +149,13 @@ rmks
 
 ## ROC curves
 
-To allow an objective comparison of combinations, the function **ROC_reports()** applies the Generalised Linear Model (stats::**glm()** with family= binomial) for each selected one. The resulting predictions are then used to compute ROC curves (with pROC::**roc()**) and their corresponding metrics which are both returned by the function as a named list object (in this case called "*reports*").  This function requires as input:
+To allow an objective comparison of combinations, the function `ROC_reports()` applies the Generalised Linear Model (`stats::glm()` with family= binomial) for each selected one. The resulting predictions are then used to compute ROC curves (with `pROC::roc()`) and their corresponding metrics which are both returned by the function as a named list object (in this case called "*reports*").  This function requires as input:
 
-- The data object ("*data*") obtained with **load_data()**.
-- The table with combinations and corresponding positive samples counts (*"tab"*), obtained with **Combi()**.
+- The data object ("*data*") obtained with `load_data()`.
+- The table with combinations and corresponding positive samples counts (*"tab"*), obtained with `Combi()`.
 
 In addition, the function requires to specify the class case, the single markers and/or the combinations of interest. 
-In this example have been chosen a single marker (Marker1) and 2 combinations (11 and 15).
+In this example have been chosen a single marker (Marker1) and 2 combinations (combinations number 11 and 15).
 ```{r}
 reports <-ROC_reports(data, markers_table = tab, case_class = 'A',
                       single_markers =c('Marker1'), selected_combinations = c(11,15))
@@ -147,14 +173,14 @@ reports$Models
 ```
 ## Retrieving composition of combinations
 
-**show_markers()** returns a data.frame containing the composition of each combination of interest. It requires as input one or more combinations (only their numbers), and the table with combinations and corresponding positive samples counts (*"tab"*, obtained with **Combi()**).
+`show_markers()` returns a data frame containing the composition of each combination of interest. It requires as input one or more combinations (only their numbers), and the table with combinations and corresponding positive samples counts (*"tab"*, obtained with `Combi()`).
 ```{r}
 show_markers(selected_combinations =c(11,15), markers_table = tab)
 ```
 
 ## Retrieving combinations containing markers of interest
 
-**combs_with()** returns the combinations containing all the markers of interest. It requires as input one or more single marker, and the table with combinations and corresponding positive samples counts (*"tab"*, obtained with **Combi()**). The list with the combinations containing all the markers is assigned to *"combs_list"* object.
+`combs_with()` returns the combinations containing all the markers of interest. It requires as input one or more single marker, and the table with combinations and corresponding positive samples counts (*"tab"*, obtained with `Combi()`). The list with the combinations containing all the markers is assigned to *"combs_list"* object.
 ```{r}
 combs_list <- combs_with(markers=c('Marker1', 'Marker3'), markers_table = tab)
 combs_list
@@ -219,11 +245,11 @@ Thus, using 0.216 as cutoff, "Combination 11" is able to classify the samples in
 
 ## Classification of new samples
 
-CombiROC package also offers the possibility to exploit the models for each selected marker/combination obtained with **ROC_reports()**  (here assigned to *reports$Models*) to directly classify new samples.
+CombiROC package also offers the possibility to exploit the models for each selected marker/combination obtained with `ROC_reports()`  (here assigned to *reports$Models*) to directly classify new samples.
 
 The unclassified dataset must be similar to the dataset used for the previous combinatorial analysis (with the same markers, and obviously without the 'Class' column).
 
-To load the dataset with the new unclassified samples  **load_unclassified_data()** has been implemented. This function is analogue to **load_data()** because it loads the same kind of files and it performs the same format checks, with the exception of what concerns 'Class' column (which is not present in unclassified datasets).  
+To load the dataset with the new unclassified samples  `load_unclassified_data()` has been implemented. This function is analogue to `load_data()` because it loads the same kind of files and it performs the same format checks, with the exception of what concerns 'Class' column (which is not present in unclassified datasets).  
 
 For explanatory purposes, in the following example has been used a 'synthetic' unclassified dataset ('data/unclassified_proteomic_data.csv') obtained by randomly picking 20 samples from the already classified dataset (*data*).
 The loaded unclassified sample is here assinged to *unc_data*. 
@@ -231,19 +257,19 @@ The loaded unclassified sample is here assinged to *unc_data*.
 unc_data <- load_unclassified_data(data = '../data/demo_unclassified_data.csv', sep = ',')
 unc_data
 ```
-The very same dataset has been included in **combiroc** package as an unclassified demo dataset, that can be directly called typing *demo_unclassified_data*. 
-```{r}
-demo_unclassified_data
+The very same dataset has been included in **combiroc** package as an unclassified demo dataset, that can be directly called typing `demo_unclassified_data`. 
+```{r, echo=FALSE}
+head(demo_unclassified_data)
 ```
 
-The prediction of the class can be achieved with **Classify()**:
+The prediction of the class can be achieved with `Classify()`:
 a function that applies the previously calculated models to the unclassified dataset and classifies the samples accordingly to the very same rule shown in the end of the **Results explanation** section.
 
 This function takes as inputs:
 
 - the unclassified dataset containing the new samples to be classified (*unc_data*).
-- the list of models that have been previously computed by **ROC_reports()** (*reports$Models*).
-- the list of metrics that have been previously computed by **ROC_reports()** (*reports$Metrics*).
+- the list of models that have been previously computed by `ROC_reports()` (*reports$Models*).
+- the list of metrics that have been previously computed by `ROC_reports()` (*reports$Metrics*).
 
 In addition the user can set the labels of the predicted class (setting Positive_class and Negative_class), otherwise they will be 1 for positive samples and 0 for the negative samples by default (see the rule shown in the end of the **Results explanation** section).
 
